--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-      background: #eae8e7;
+      background:  #cce0ff  ;
       color: #767270;
       padding: 1%;
       font-size: 14px;
@@ -22,8 +22,8 @@ body {
     .sidebar-top { position: relative; }
 
     .profile-basic {
-      position: relative;
-      bottom: 20px;
+      position: absolute;
+      bottom: 5px;
       left: 10px;
       color: blue;
     }
@@ -46,21 +46,21 @@ body {
     .profile-info .value{
     }
 
-    .social-media:hover{
+    .social-media: hover{
       cursor: pointer;
       color: white;
     }
 
     .content {
-      width: 48%;
-      margin-left: 2%;
+      width: 47%;
+      margin-left: 1%;
       display: inline-block;
       vertical-align: top;
     }
 
-    .work-experience, .education {
-      margin-bottom: 30px;
-      padding: 5% 2% 5% 10%;
+    .work-experience, .education, .achievment{
+      margin-bottom: 20px;
+      padding: 3% 1% 3% 8%;
       background: white;
       box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
     }
@@ -86,10 +86,35 @@ body {
     }
 
     .fa {
+      color: blue;
       font-size: 25px; 
     }
 
     .fa-facebook, .fa-instagram {
+      color: blue;
 
       font-size: 50px;
     }
+
+    .sidebar .social-media{
+      margin-right: 10px;
+      text-decoration: none;
+      color: #fff;
+    }
+
+.profileBox{
+  width: 94%;
+  padding: 3%;
+  background: #000;
+
+
+}
+.profileBox h1{
+
+      position: absolute;
+    width: 94%;
+    bottom: -4px;
+    background: rgba(0,0,0,0.8);
+    text-align: center;
+    padding: 9px 0;
+}
