--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,9 @@ body {
       border-bottom: 1px solid #4783c2;
     }
 
+ .profile-info h1{
+      margin-top:0;
+    }
      .profile-info p{
       margin-left: 10px;
       display: inline-block;
@@ -58,7 +61,7 @@ body {
       vertical-align: top;
     }
 
-    .work-experience, .education, .achievment{
+    .Other-Activity, .education, .achievment{
       margin-bottom: 20px;
       padding: 3% 1% 3% 8%;
       background: white;
@@ -86,7 +89,7 @@ body {
     }
 
     .fa {
-      color: blue;
+      color: white;
       font-size: 25px; 
     }
 
@@ -94,6 +97,10 @@ body {
       color: blue;
 
       font-size: 50px;
+    }
+
+    .fa-book, .fa-graduation-cap, .fa-pencil-square-o{
+      color: black;
     }
 
     .sidebar .social-media{
