--- a/css/style.css
+++ b/css/style.css
@@ -95,12 +95,11 @@ body {
 
     .fa-facebook, .fa-instagram {
       color: blue;
-
-      font-size: 50px;
+      font-size: 35px;
     }
 
     .fa-book, .fa-graduation-cap, .fa-pencil-square-o{
-      color: black;
+      color: grey;
     }
 
     .sidebar .social-media{
