--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@ body {
     }
 
     .fa-book, .fa-graduation-cap, .fa-pencil-square-o{
-      color: grey;
+      color: black;
     }
 
     .sidebar .social-media{
